# Microscopy-AI-Agent

./: .gitignore  .gitmodules  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/: config.py  main.py  microscope_api.py
app/agent/: core.py  supervised_executor.py
app/api/: server.py
app/services/asyncroscopy/: client.py  server.py  server_mock.py
app/services/asyncroscopy/protocols/: execution_protocol.py
app/services/smart_proxy/: server.py  server_mock.py
app/tools/: microscopy.py  workflow_framework.py
app/utils/: memory.py  server_cli.py
notebooks/: run_agent.ipynb  run_agent_api_key_keyring.ipynb
scripts/: run_with_mcp.py
src/atomonous/: __init__.py  config.py
src/atomonous/agent/: ast_utils.py  core.py  models.py  streamed_run.py  supervised_executor.py
src/atomonous/api/: server.py
src/atomonous/data/: base.py  converters.py  factory.py  types.py
src/atomonous/data/default_converters/: image_converters.py  mcp_converter.py  text_converters.py
src/atomonous/tools/: experiment_tools.py  microscopy.py  symbolic_regression_tool.py  workflows.py
src/atomonous/utils/: server_cli.py
tests/: test_agent.py  test_agent_fluence_experiment.py  test_agent_low_mem.py  test_dal.py  test_default_tools.py  test_fluence_calibration_workflow.py  test_generate_function.py  test_image_stitching_workflow.py  test_microscopy_integration.py  test_workflow_framework.py  verify_microscope_api.py
